force-app/main/default/objects/Employee__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <externalId>true</externalId>
    <label>EmployeeID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>