force-app/main/default/objects/Employee__c/validationRules/Age_Between_1_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Between_1_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Age__c &gt; 100,Age__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Please add a valid age between 1 and 100.</errorMessage>
</ValidationRule>