force-app/main/default/objects/Employee__c/validationRules/Empty_Phone_or_Email_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Phone_or_Email_Value</fullName>
    <active>true</active>
    <description>Uses  Method of Contact picklist value  to check  either Mobile Number  or Email field values for blank values.</description>
    <errorConditionFormula>OR((ISPICKVAL( Method_of_Contact__c ,&apos;Phone&apos;)  &amp;&amp;  ISBLANK(Mobile_Number__c)),
 ISPICKVAL( Method_of_Contact__c ,&apos;Email&apos;)  &amp;&amp;  ISBLANK(Email__c))</errorConditionFormula>
    <errorMessage>Please enter  a value for the phone or email related to Method of Contact value.</errorMessage>
</ValidationRule>