force-app/main/default/objects/Employee__c/validationRules/Invalid_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Phone_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(Mobile_Number__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile_Number__c</errorDisplayField>
    <errorMessage>Invalid Phone Format. Please enter a valid phone number.</errorMessage>
</ValidationRule>